--- a/src/components/Imaginator/Imaginator.css
+++ b/src/components/Imaginator/Imaginator.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.Imaginator-controls-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+}
