--- a/src/components/Folder/Folder.css
+++ b/src/components/Folder/Folder.css
@@ -2,12 +2,21 @@
     width: 100%;
     /*background-color: #0093E9;*/
     /*background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);*/
-    padding: 15px 20px;
+    padding: 12px 20px;
     border-radius: 10px;
     /*box-shadow: 3px 3px 10px rgba(0, 0, 0, .2);/*
     /*color: white;*/
     transition: .2s;
     cursor: pointer;
+    transition: .1s;
+}
+
+.Folder input{
+    display: none;
+}
+
+.Folder:active{
+    transform: scale(1.02);
 }
 
 .Folder:hover{
@@ -16,6 +25,16 @@
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     box-shadow: 3px 3px 15px rgba(0, 0, 0, .4);
     color: white;
+    font-weight: 600;
+    /*border: 3px solid white;*/
+}
+.Folder.selected{
+    background-color: #0093E9;
+    /*background-image: linear-gradient(45deg, #0068A4 0%, #63AEA6 100%);*/
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, .4);
+    color: white;
+    font-weight: 600;
     /*border: 3px solid white;*/
 }
 
