[UPDATE] add algolia sync script and fix some styles in loader component

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,7 +1,7 @@
 .Loader{
     background: black;
     color: white;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0 ;
     bottom: 0;
